1. Синхронный обмен сообщений [#458496 #267787]05 Уровень : 3. МидлКатегория : 3.5. МикросервисыТопик : 3.5.3. Межпроцессорное взаимодействие

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/synchronous_messaging
-spring.datasource.username=postgres
-spring.datasource.password=PilotS
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/synchronous_messaging
+#spring.datasource.username=postgres
+#spring.datasource.password=PilotS
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #Для того, чтобы таблицы создавались по вашим сущностям в бд
 # автоматическое создание таблиц
@@ -23,3 +23,6 @@ logging.level.org.springframework.web=ERROR
 logging.level.ru.leodev=DEBUG
 # паттерн логов для консоли
 #logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+#Порты, зависящие от среды(так как это вторая часть проекта порт 8080 занять при запущенной Часть-1 проекта)
+server.port=8081
